Reworked whole UI

--- a/boule/templates/base.html
+++ b/boule/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html>
 
@@ -7,18 +9,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
     <div class="flex justify-center ">
         <div class="container max-w-[800px]">
-            <nav class="flex space-x-8 justify-center py-8">
-                <a href="{% url 'ranking' %}" class="hover:text-blue-600">Rangliste</a>
-                <a href="{% url 'match-list' %}" class="hover:text-blue-600">Partien</a>
-                <a href="{% url 'player-list' %}" class="hover:text-blue-600">Spieler</a>
+            <nav class="flex space-x-8 justify-center py-4 mb-8">
+                <a href="{% url 'ranking' %}" class="hover:text-blue-600 font-semibold">Rangliste</a>
+                <a href="{% url 'match-list' %}" class="hover:text-blue-600 font-semibold">Partien</a>
+                <a href="{% url 'player-list' %}" class="hover:text-blue-600 font-semibold">Spieler</a>
             </nav>
-            {% block content %}
-            {% endblock %}
+            <div class="w-full px-4 space-y-8">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
     </div>
 
