--- a/boule/templates/base.html
+++ b/boule/templates/base.html
@@ -20,7 +20,7 @@
                 <a href="{% url 'match-list' %}" class="hover:text-blue-600 font-semibold">Partien</a>
                 <a href="{% url 'player-list' %}" class="hover:text-blue-600 font-semibold">Spieler</a>
             </nav>
-            <div class="w-full px-4 space-y-8">
+            <div class="w-full px-4 pb-8 space-y-8">
                 {% block content %}
                 {% endblock %}
             </div>
