--- a/boule/templates/player/player_stats.html
+++ b/boule/templates/player/player_stats.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h2 class="font-bold text-2xl md:text-4xl">{{ player.name }} Statistik</h2>
+    <h2 class="font-bold text-2xl md:text-4xl">{{ player.first_name }} Statistik</h2>
 </div>
 <div class="md:grid md:grid-cols-2 gap-4 space-y-4 md:space-y-0">
     <div class="grid grid-cols-3 gap-4">
