--- a/boule/templates/player/player_delete.html
+++ b/boule/templates/player/player_delete.html
@@ -4,12 +4,13 @@
 <h2 class="font-bold uppercase md:text-xl">Spieler löschen</h2>
 
 <div>
-    <p>Sicher, dass <span class="font-bold">{{ player.name }}</span> endgültig gelöscht werden soll? Alle
+    <p>Sicher, dass <span class="font-bold">{{ player.first_name }} {{ player.last_name }}</span> endgültig gelöscht
+        werden soll? Alle
         Spielergebnisse gehen für diesen Spieler
         verloren!</p>
 </div>
 
-<form action="" method="post" class="flex-col space-y-8">
+<form action="" method="post" class="">
     {% csrf_token %}
     <input type="submit" value="Löschen" class="py-2 px-4 bg-black text-white rounded hover:cursor-pointer">
 </form>
