--- a/boule/templates/player/player_edit.html
+++ b/boule/templates/player/player_edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="flex justify-between items-center">
-    <h2 class="font-bold uppercase md:text-xl">{{ player.name }} editieren</h2>
+    <h2 class="font-bold uppercase md:text-xl">{{ player.first_name }} editieren</h2>
     <a href="{% url 'player-delete' player.pk %}">
         <div class="flex items-center py-1 px-2 text-white bg-black rounded text-sm">
             <i data-lucide="trash-2" class="w-4 h-4 mr-2"></i>
@@ -17,11 +17,19 @@
     {{ message }}
 </div>
 {% endfor %}
+<div class="flex justify-center font-semibold text-lg text-red-600">
+    {{ form.non_field_errors }}
+</div>
 
 <form action="" method="post" class="flex-col space-y-8">
     {% csrf_token %}
-    <div>
-        {{ form.name|as_crispy_field }}
+    <div class="md:grid md:grid-cols-2 md:gap-4">
+        <div>
+            {{ form.first_name|as_crispy_field }}
+        </div>
+        <div>
+            {{ form.last_name|as_crispy_field }}
+        </div>
     </div>
     <input type="submit" value="Speichern" class="py-2 px-4 bg-black text-white rounded hover:cursor-pointer">
 </form>
