Added bonus points

--- a/boule/templates/match/match_list.html
+++ b/boule/templates/match/match_list.html
@@ -97,7 +97,7 @@
     </a>
     {% endfor %}
     {% empty %}
-    <div class="w-full text-center">Für diesen Zeitraum sind leider keine Partien vorhanden.</div>
+    <div class="w-full text-center">Für diese Suchkriterien sind leider keine Partien vorhanden.</div>
     {% endfor %}
 </div>
 {% endblock %}
