--- a/boule/templates/ranking/ranking.html
+++ b/boule/templates/ranking/ranking.html
@@ -3,9 +3,10 @@
 
 
 {% block content %}
+
 <div class="flex flex-col justify-center items-center space-y-4">
-    <img src="{% static 'images/podium.gif' %}" alt="" class="w-16 h-16">
-    <h2 class="font-bold uppercase md:text-xl">Eschweiler Rangliste</h2>
+    <img src="{% static 'images/ranking-color.png' %}" alt="" class="w-16 h-16">
+    <h2 class="font-bold uppercase text-xl">Eschweiler - Rangliste</h2>
 </div>
 
 {% block ranking %}
