--- a/boule/templates/player/statistics/month.html
+++ b/boule/templates/player/statistics/month.html
@@ -95,7 +95,7 @@
             </h4>
         </div>
         <div class="flex flex-col justify-center items-center space-y-2 p-2 md:p-4 border border-gray-300 rounded-lg">
-            <div class="text-xl">{{ score }}</div>
+            <div class="text-xl">{{ score|floatformat:2 }}</div>
             <h4 class="uppercase text-sm">
                 Ranglistenpunkte
             </h4>
